# MyFilepassword

./: .gitignore  在线加密文件解密SAAS网站需求文档.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7bb032b2e1a4_initial_migration.py  e70346945285_add_email_field_to_tasks.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  files.py  payments.py  tasks.py  users.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  files.py  notifications.py  payments.py  tasks.py  users.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  logger.py  security.py
backend/app/crud/: file.py  payment.py  task.py  user.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  api_key.py  coupon.py  coupon_types.py  file.py  notification.py  notification_types.py  payment.py  payment_types.py  task.py  task_types.py  user.py  user_types.py
backend/app/schemas/: __init__.py  common.py  file.py  notification.py  payment.py  task.py  user.py
backend/app/services/: auth.py  auth_service.py  crack.py  email.py  file_service.py  notification_service.py  payment_service.py  task_service.py  user_service.py
backend/app/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  crack_tasks.py  file_tasks.py  notification_tasks.py
backend/scripts/: cli_main.py  dev.bat  dev.sh  init_db.py  zip_cracker_cli.py
doc/ui/: 2.首页  3.上传页面  4.仪表板  5.任务详情页  6.定价
docs/: 01-项目总体设计文档.md  02-后端API设计文档.md  03-前端设计文档.md  04-数据库设计文档.md
frontend/: README.md  app.config.ts  app.vue  nuxt.config.ts  package.json  tailwind.config.js  tsconfig.json
frontend/components/: AppFooter.vue  AppNavigation.vue
frontend/layouts/: default.vue
frontend/pages/: decrypt.vue  files.vue  index.vue  settings.vue  upload.vue
scripts/: CLI_README.md  hash_mode.xlsx
